--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,12 @@ body {
   position: relative;
 }
 
-.messaggioNumeri {
+.start {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, 100%);
-  height: 100px;
   background-color: aquamarine;
-  padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
