--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,12 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.risultato {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 100%);
+  text-align: center;
+  line-height: 50px;
+}
